<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/app_title"
        android:textSize="25sp"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:gravity="center">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@color/design_default_color_surface"
        android:text="@string/notes"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:onClick="notes"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@color/design_default_color_surface"
        android:text="@string/expense"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:onClick="expense"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@color/design_default_color_surface"
        android:text="@string/tasks"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:onClick="task"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:background="@color/design_default_color_surface"
        android:text="@string/my_profile"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:onClick="profile"
        >
    </Button>

</LinearLayout>