<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:orientation="vertical"
    android:id="@+id/task"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="3"
                android:text="@string/task_name">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="6"
                android:hint="@string/taskname_hint"
                android:id="@+id/taskname">
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="3"
                android:text="@string/task_date">
            </TextView>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="380dp"
                android:layout_gravity="center"
                android:layout_weight="1"

                >
            </DatePicker>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="7">
                <Button
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:text="Clear">
                </Button>
                <Button
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:text="Save">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>